# react-banking-app

./: README.md  package.json
.agents/skills/: sentry-devin-alerts.md
.agents/skills/sentry-devin-alerts/: SKILL.md
backend/: .gitignore  pyproject.toml
backend/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py  seed.py
backend/app/routers/: auth.py  cards.py  recipients.py  savings.py  transactions.py  transfers.py  users.py
public/: app.css  index.html  manifest.json
src/: index.tsx
src/api/: client.ts
src/components/: ProtectedRoute.tsx
src/components/Actions/: Actions.tsx
src/components/Card/: Card.tsx
src/components/Form/: Button.tsx
src/components/History/: History.tsx
src/components/Insights/: BudgetProgress.tsx  CategoryBreakdown.tsx  SpendingTrend.tsx  TopCategories.tsx
src/components/PrivateRoute/: PrivateRoute.tsx
src/components/Send/: AmountInput.tsx  RecipientList.tsx  TransferConfirmation.tsx  TransferError.tsx  TransferSuccess.tsx
src/components/Widgets/: Widgets.tsx
src/context/: AppContext.tsx  AuthContext.tsx
src/navigation/: Navigation.tsx
src/pages/: Add.tsx  Cards.tsx  Home.tsx  Insights.tsx  Profile.tsx  Savings.tsx  SendMoney.tsx  Signin.tsx  Transactions.tsx
src/services/: api.ts  storage.ts
